# Diablo IV Collection Log

A web app that allows Diablo IV players keep track of their Transmog
collections.

## [Unreleased]

## [1.1.2] - 2023-01-23

### Fixed

- Overall percentage text squashed on small screens.

## [1.1.1] - 2023-01-22

### Added

- Overall percentage to progress bar.
- Analytics for usage/visitation visibility.

### Changed

- Style and layout of the site footer.

### Fixed

- Expired discord invite, replaced with permalink.

## [1.1.0] - 2023-01-21

### Added

- Missing "Sturdy Saddle" horse armor from Vendor collection.
- Filter to show/hide collected items.
- Collapsable collections; click anywhere on the header to toggle.
- Progress bar to track total progress with option to disable.
- Display option to inverse the card "collected" modifier.
- Mountain Dew, Coco Fresh Tea and Call of Duty promotional collections.

### Changed

- Updated the descriptions of the "Assassin's Satchel" and "Crest of Rathma"
  trophies to indicate which respective zones they drop from.

## [1.0.0] - 2023-01-18

### Added

- Initial Diablo IV Collection Log release.
- Displays Transmogs in chronological and curated grouping.
- Toggle to mark items as "collected".
- Toggle to hide individual items from any collection.
- Config options to show/hide item type groups (mounts, horse armor, trophies,
  weapons, armor).
- Config options to filter items by promotional, premium, out of rotation.
- Two layout options: card view and list view.